[gd_scene load_steps=3 format=3 uid="uid://bxc8qv7ywh8oh"]

[ext_resource type="Script" path="res://Scripts/UI/Journal.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.1, 0.08, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.3, 1)

[node name="Journal" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "ðŸ“– NPC Journal"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NPCListScroll" type="ScrollContainer" parent="Panel/VBox/HBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="NPCList" type="VBoxContainer" parent="Panel/VBox/HBox/NPCListScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Panel/VBox/HBox"]
layout_mode = 2

[node name="DetailPanel" type="VBoxContainer" parent="Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NPCName" type="Label" parent="Panel/VBox/HBox/DetailPanel"]
layout_mode = 2
text = "Select an NPC"
theme_override_font_sizes/font_size = 24

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox/HBox/DetailPanel"]
layout_mode = 2

[node name="Stats" type="RichTextLabel" parent="Panel/VBox/HBox/DetailPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "No NPC selected"
fit_content = true

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox/HBox/DetailPanel"]
layout_mode = 2

[node name="ConvLabel" type="Label" parent="Panel/VBox/HBox/DetailPanel"]
layout_mode = 2
text = "Conversations:"
theme_override_font_sizes/font_size = 18

[node name="ConversationsScroll" type="ScrollContainer" parent="Panel/VBox/HBox/DetailPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Conversations" type="RichTextLabel" parent="Panel/VBox/HBox/DetailPanel/ConversationsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "No conversations"
fit_content = true

[node name="BottomBar" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Instructions" type="Label" parent="Panel/VBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "â†‘â†“ Navigate | Enter: View Details | J: Close"
